data/raw_logs/syntactic/syn_comma.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_comma.c:1:17: error: expected ';', ',' or ')' before 'int'
    1 | void func(int a int b) {}
      |                 ^~~
